--- a/.azure-pipelines/gpu-tests.yml
+++ b/.azure-pipelines/gpu-tests.yml
@@ -44,11 +44,8 @@ jobs:
   - job: pytest
     strategy:
       matrix:
-        'PyTorch | 2.0.1':
-          image: "speediedan/finetuning-scheduler:py3.10-pt2.0.1-pl2.3-azpl-init"
-          scope: "2.0.1"
         'PyTorch | latest':
-          image: "speediedan/finetuning-scheduler:py3.11-pt2.3.0-pl2.3-azpl-init"
+          image: "speediedan/finetuning-scheduler:py3.11-pt2.4.0-pl2.4-azpl-init"
           scope: ""
     # how long to run the job before automatically cancelling
     timeoutInMinutes: "100"
@@ -110,5 +107,5 @@ jobs:
         set -e
         . /tmp/venvs/fts_dev/bin/activate
         python -m pytest src/fts_examples/stable -v --maxfail=1 --durations=0 -W ignore:\`np.object\`:DeprecationWarning -W ignore:'`np.int` is':DeprecationWarning
-      condition: notIn(variables['scope'], '2.0.1')
+      # condition: notIn(variables['scope'], '2.0.1')
       displayName: 'Testing: examples'
